--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Dauphinais CSC106 The Joy of Programming<title>
+  </head>
+  <body>
+    <h1>Welcome to Jacob's Portfolio!</h1>
+    
+    <p>This is just a test to see if it works. Uploading images soon.</p>
+    
+  </body>
+</html>
