--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title> Dauphinais CSC106 The Joy of Programming </title>
   </head>
   <body>
+    <img src="csc106_banner.jpg">
     <h1>Welcome to Jacob's Portfolio!</h1>
     
     <p>This is just a test to see if it works. Uploading images soon.</p>
