--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <td> <img src="javascripts_button.png"> </td>
         <td> <img src="about_me_button.png"> </td>
       </tr>
-    </table
+    </table>
     <h1>Welcome to Jacob's Portfolio!</h1>
     
     <p>This is just a test to see if it works. Uploading images soon.</p>
