--- a/javascripts.html
+++ b/javascripts.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title> Dauphinais CSC106 The Joy of Programming </title>
+  </head>
+  <body>
+    <img src="csc106_banner.jpg">
+    <table>
+      <tr>
+        <td> <img src="home_button.png"> </td>
+        <td> <img src="javascripts_button.png"> </td>
+        <td> <img src="about_me_button.png"> </td>
+      </tr>
+    </table>
+    <h1>Welcome to Jacob's Portfolio!</h1>
+    
+    <p>This is just a test to see if it works. Uploading images soon.</p>
+    
+  </body>
+</html>
