--- a/javascripts.html
+++ b/javascripts.html
@@ -8,9 +8,21 @@
     <img src="csc106_banner.jpg">
     <table>
       <tr>
-        <td> <img src="home_button.png"> </td>
-        <td> <img src="javascripts_button.png"> </td>
-        <td> <img src="about_me_button.png"> </td>
+        <td> 
+          <a href="https://jacdauph.github.io/index.html">
+            <img src="home_button.png">
+          </a>
+        </td>
+        <td> 
+          <a href="https://jacdauph.github.io/javascripts.html">
+            <img src="javascripts_button.png">
+          </a>
+        </td>
+        <td> 
+          <a href="https://jacdauph.github.io/aboutme.html">
+            <img src="about_me_button.png">
+          </a>
+        </td>
       </tr>
     </table>
     <h1>Welcome to Jacob's Portfolio!</h1>
