--- a/javascripts.html
+++ b/javascripts.html
@@ -25,7 +25,7 @@
         </td>
       </tr>
     </table>
-    <h1>Welcome to Jacob's Portfolio!</h1>
+    <h1>Javascripts Homepage</h1>
     
     <p>This is just a test to see if it works. Uploading images soon.</p>
     
