Update and rename aboutme.html to about.html

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
           </a>
         </td>
         <td> 
-          <a href="https://jacdauph.github.io/aboutme.html">
+          <a href="https://jacdauph.github.io/about.html">
             <img src="about_me_button.png">
           </a>
         </td>
