--- a/javascripts.html
+++ b/javascripts.html
@@ -5,22 +5,22 @@
     <title> Dauphinais JavaScripts </title>
   </head>
   <body>
-    <img src="csc106_banner.jpg">
+    <img src="csc106_banner.jpg" alt="CSC106 The Joy of Programming">
     <table>
       <tr>
         <td> 
           <a href="https://jacdauph.github.io/index.html">
-            <img src="home_button.png">
+            <img src="home_button.png" alt="Home Page">
           </a>
         </td>
         <td> 
           <a href="https://jacdauph.github.io/javascripts.html">
-            <img src="javascripts_button.png">
+            <img src="javascripts_button.png" alt="JavaScripts Page">
           </a>
         </td>
         <td> 
           <a href="https://jacdauph.github.io/about.html">
-            <img src="about_me_button.png">
+            <img src="about_me_button.png" alt="About Me Page">
           </a>
         </td>
       </tr>
