--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
     <title> Dauphinais CSC106 The Joy of Programming </title>
   </head>
   <body>
-    <img src="csc106_banner.jpg">
+    <img src="csc106_banner.jpg" alt="CSC106 The Joy of Programming">
     <table>
       <tr>
         <td> 
           <a href="https://jacdauph.github.io/index.html">
-            <img src="home_button.png">
+            <img src="home_button.png" alt="Home Page">
           </a>
         </td>
         <td> 
           <a href="https://jacdauph.github.io/javascripts.html">
-            <img src="javascripts_button.png">
+            <img src="javascripts_button.png" alt="JavaScripts Page">
           </a>
         </td>
         <td> 
           <a href="https://jacdauph.github.io/about.html">
-            <img src="about_me_button.png">
+            <img src="about_me_button.png" alt="About Me Page">
           </a>
         </td>
       </tr>
     </table>
     <h1>Welcome to Jacob's Portfolio!</h1>
     
-    <p>This is just a test to see if it works. Uploading images soon.</p>
+    <p>Welcome to my GitHub Repository Website! Here you will be able to locate my JavaScript Projects,
+      located in the relevant tabe under the banner, as well as learning more about me in the About Me tab, also located under the banner.
+    Thank you for taking a look at it!</p>
     
   </body>
 </html>
