--- a/about.html
+++ b/about.html
@@ -5,29 +5,34 @@
     <title> Dauphinais CSC106 The Joy of Programming </title>
   </head>
   <body>
-    <img src="csc106_banner.jpg">
+    <img src="csc106_banner.jpg" alt="CSC106 The Joy of Programming">
     <table>
       <tr>
         <td> 
           <a href="https://jacdauph.github.io/index.html">
-            <img src="home_button.png">
+            <img src="home_button.png" alt="Home Page">
           </a>
         </td>
         <td> 
           <a href="https://jacdauph.github.io/javascripts.html">
-            <img src="javascripts_button.png">
+            <img src="javascripts_button.png" alt="JavaScripts Page">
           </a>
         </td>
         <td> 
           <a href="https://jacdauph.github.io/about.html">
-            <img src="about_me_button.png">
+            <img src="about_me_button.png" alt="About Me Page">
           </a>
         </td>
       </tr>
     </table>
     <h1>About Me</h1>
     
-    <p>This is just a test to see if it works. Uploading images soon.</p>
+    <p>Welcome to my about me page! </p>
+    <p>My name is Jacob Dauphinais, and 
+      I have been interested in programming, developing, and computer science ever since I was young.
+    Being in the CSC106 The Joy of Programming Class is really exciting, 
+      as I get to learn more about languages I don't know! Working with others on coding projects
+      has been a dream of mine, so doing it in this class will be very exciting.</p>
     
   </body>
 </html>
