--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Dauphinais CSC106 The Joy of Programming </title>
+    <title> About Me </title>
   </head>
   <body>
     <img src="csc106_banner.jpg" alt="CSC106 The Joy of Programming">
