--- a/javascripts.html
+++ b/javascripts.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Dauphinais JavaScripts </title>
+    <title> JavaScripts </title>
   </head>
   <body>
     <img src="csc106_banner.jpg" alt="CSC106 The Joy of Programming">
