--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </td>
       </tr>
     </table>
-    <h1>Welcome to Jacob's Portfolio!</h1>
+    <h1>Welcome to Jacob's Programming Portfolio!</h1>
     
     <p>Welcome to my GitHub Repository Website! Here you will be able to locate my JavaScript Projects,
       located in the relevant tabe under the banner, as well as learning more about me in the About Me tab, also located under the banner.
