--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
       located in the relevant tabe under the banner, as well as learning more about me in the About Me tab, also located under the banner.
     Thank you for taking a look at it!</p>
     
+    
+    <center> <img src = "csc106_uri.jpg"> </center>
   </body>
 </html>
