--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     Thank you for taking a look at it!</p>
     
     
-    <center> <img src = "csc106_uri.jpg"> </center>
+    <center> <img src = "csc106_uri.png"> </center>
   </body>
 </html>
