--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     Thank you for taking a look at it!</p>
     
     
-    <center> <img src = "csc106_uri.png"> </center>
+    <center> <img src = "csc106_uri.png" width: 100> </center>
   </body>
 </html>
