--- a/about.html
+++ b/about.html
@@ -27,6 +27,8 @@
     </table>
     <h1>About Me</h1>
     
+    <right> <img src="face_about.JPG"> </right>
+    
     <p>Welcome to my about me page! </p>
     <p>My name is Jacob Dauphinais, and 
       I have been interested in programming, developing, and computer science ever since I was young.
