--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     </table>
     <h1>About Me</h1>
     
-    <right> <img src="face_about.JPG" width="250"> </right>
+    <img src="face_about.JPG" width="250">
     
     <p>Welcome to my about me page! </p>
     <p>My name is Jacob Dauphinais, and 
