--- a/about.html
+++ b/about.html
@@ -8,6 +8,10 @@
         float: right;
         padding: 16px;
       }
+      #main-text {
+        float: left;
+        width: 50%;
+      }
     
     </style>
   </head>
@@ -37,7 +41,7 @@
     <img id="face" src="face_about.JPG" width="500">
     
     <p>Welcome to my about me page! </p>
-    <p>My name is Jacob Dauphinais, and 
+    <p id= "main-text"> My name is Jacob Dauphinais, and 
       I have been interested in programming, developing, and computer science ever since I was young.
     Being in the CSC106 The Joy of Programming Class is really exciting, 
       as I get to learn more about languages I don't know! Working with others on coding projects
