--- a/testsites/index_test.html
+++ b/testsites/index_test.html
@@ -3,23 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title> Dauphinais CSC106 The Joy of Programming </title>
+    <link rel = "stylesheet" href = "standardstyle.css">
   </head>
   <body>
     <img src="csc106_banner.jpg" alt="CSC106 The Joy of Programming">
     <table>
       <tr>
         <td> 
-          <a href="https://jacdauph.github.io/index.html">
+          <a href="https://jacdauph.github.io/testsites/index_test.html">
             <img src="home_button.png" alt="Home Page">
           </a>
         </td>
         <td> 
-          <a href="https://jacdauph.github.io/javascripts.html">
+          <a href="https://jacdauph.github.io/testsites/javascripts_test.html">
             <img src="javascripts_button.png" alt="JavaScripts Page">
           </a>
         </td>
         <td> 
-          <a href="https://jacdauph.github.io/about.html">
+          <a href="https://jacdauph.github.io/testsites/about_test.html">
             <img src="about_me_button.png" alt="About Me Page">
           </a>
         </td>
