--- a/testsites/javascripts_test.html
+++ b/testsites/javascripts_test.html
@@ -10,17 +10,17 @@
       <tr>
         <td> 
           <a href="https://jacdauph.github.io/testsites/index_test.html">
-            <img src="home_button.png" alt="Home Page">
+            <img src="/assets/home_button.png" alt="Home Page">
           </a>
         </td>
         <td> 
           <a href="https://jacdauph.github.io/testsites/javascripts_test.html">
-            <img src="javascripts_button.png" alt="JavaScripts Page">
+            <img src="/assets/javascripts_button.png" alt="JavaScripts Page">
           </a>
         </td>
         <td> 
           <a href="https://jacdauph.github.io/testsites/about_test.html">
-            <img src="about_me_button.png" alt="About Me Page">
+            <img src="/assets/about_me_button.png" alt="About Me Page">
           </a>
         </td>
       </tr>
