--- a/testsites/javascripts_test.html
+++ b/testsites/javascripts_test.html
@@ -5,22 +5,26 @@
     <title> JavaScripts </title>
   </head>
   <body>
-    <img src="csc106_banner.jpg" alt="CSC106 The Joy of Programming">
+    <img src="/assets/myBanner.jpg" alt="CSC 106 The Joy of Programming Jacob Dauphinais Programming Portfolio">
     <table>
       <tr>
         <td> 
           <a href="https://jacdauph.github.io/testsites/index_test.html">
-            <img src="/assets/home_button.png" alt="Home Page">
+            <img src="/assets/home.png" alt="Home Page">
           </a>
         </td>
         <td> 
           <a href="https://jacdauph.github.io/testsites/javascripts_test.html">
-            <img src="/assets/javascripts_button.png" alt="JavaScripts Page">
+            <img src="/assets/javascripts.png" alt="JavaScripts Page">
           </a>
         </td>
+        <td>
+          <a href="https://jacdauph.github.io/testsites/apps_test.html">
+            <img src="/assets/apps.png" alt="Apps Page">
+          </a>
         <td> 
           <a href="https://jacdauph.github.io/testsites/about_test.html">
-            <img src="/assets/about_me_button.png" alt="About Me Page">
+            <img src="/assets/about.png" alt="About Me Page">
           </a>
         </td>
       </tr>
