--- a/testsites/index_test.html
+++ b/testsites/index_test.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Dauphinais CSC106 The Joy of Programming </title>
+    <title> Home Page </title>
     <link rel = "stylesheet" href = "standardstyle.css">
   </head>
   <body>
