--- a/testsites/index_test.html
+++ b/testsites/index_test.html
@@ -6,8 +6,8 @@
     <link rel = "stylesheet" href = "standardstyle.css">
   </head>
   <body>
-    <img src="/assets/myBanner.jpg" alt="CSC 106 The Joy of Programming Jacob Dauphinais Programming Portfolio">
-    <table>
+    <center> <img src="/assets/myBanner.jpg" alt="CSC 106 The Joy of Programming Jacob Dauphinais Programming Portfolio"> </center>
+    <center> <table>
       <tr>
         <td> 
           <a href="https://jacdauph.github.io/testsites/index_test.html">
@@ -29,7 +29,7 @@
           </a>
         </td>
       </tr>
-    </table>
+    </table> </center>
     <h1>Welcome to Jacob's Programming Portfolio!</h1>
     
     <p>Welcome to my GitHub Repository Website! Here you will be able to locate my JavaScript Projects,
