--- a/testsites/apps_test.html
+++ b/testsites/apps_test.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Apps </title>
+    <title> Home Page </title>
+    <link rel = "stylesheet" href = "standardstyle.css">
   </head>
   <body>
-    <img src="/assets/myBanner.jpg" alt="CSC 106 The Joy of Programming Jacob Dauphinais Programming Portfolio">
-    <table>
+    <center> <img src="/assets/myBanner.jpg" alt="CSC 106 The Joy of Programming Jacob Dauphinais Programming Portfolio"> </center>
+    <center> <table>
       <tr>
         <td> 
           <a href="https://jacdauph.github.io/testsites/index_test.html">
@@ -28,7 +29,7 @@
           </a>
         </td>
       </tr>
-    </table>
+    </table> </center>
     <h1>Apps</h1>
     
     <p>Welcome to my Apps page! </p>
