--- a/testsites/javascripts_test.html
+++ b/testsites/javascripts_test.html
@@ -11,21 +11,21 @@
       <tr>
         <td> 
           <a href="https://jacdauph.github.io/testsites/index_test.html">
-            <img src="/assets/home.png" alt="Home Page">
+            <img src="/assets/home_new.png" alt="Home Page">
           </a>
         </td>
         <td> 
           <a href="https://jacdauph.github.io/testsites/javascripts_test.html">
-            <img src="/assets/javascripts.png" alt="JavaScripts Page">
+            <img src="/assets/javascripts_new.png" alt="JavaScripts Page">
           </a>
         </td>
         <td>
           <a href="https://jacdauph.github.io/testsites/apps_test.html">
-            <img src="/assets/apps.png" alt="Apps Page">
+            <img src="/assets/apps_new.png" alt="Apps Page">
           </a>
         <td> 
           <a href="https://jacdauph.github.io/testsites/about_test.html">
-            <img src="/assets/about.png" alt="About Me Page">
+            <img src="/assets/about_new.png" alt="About Me Page">
           </a>
         </td>
       </tr>
