--- a/testsites/apps_test.html
+++ b/testsites/apps_test.html
@@ -30,9 +30,11 @@
         </td>
       </tr>
     </table> </center>
-    <h1>Apps</h1>
+    <div id="main-body">
+      <h1>Apps</h1>
     
-    <p>Welcome to my Apps page! </p>
+      <p>Welcome to my Apps page! </p>
+    </div>
     
   </body>
 </html>
