--- a/testsites/about_test.html
+++ b/testsites/about_test.html
@@ -30,7 +30,7 @@
         </td>
       </tr>
     </table> </center>
-    <div class="clearbox">
+    <div id="aboutpage">
       <h1>About Me</h1>
     
       <p>Welcome to my about me page! </p>
