--- a/testsites/index_test.html
+++ b/testsites/index_test.html
@@ -30,7 +30,7 @@
         </td>
       </tr>
     </table> </center>
-    <div id="main-body"> 
+    <div class="main-body"> 
       <h1>Welcome to Jacob's Programming Portfolio!</h1>
     
       <p>Welcome to my GitHub Repository Website! Here you will be able to locate my JavaScript Projects,
