--- a/testsites/javascripts_test.html
+++ b/testsites/javascripts_test.html
@@ -30,7 +30,7 @@
         </td>
       </tr>
     </table> </center>
-    <div id="main-body">
+    <div class="main-body">
       <h1>Javascripts Homepage</h1>
     
       <p>Located on this site, you will find all of my JavaScript files for the 
