--- a/testsites/apps_test.html
+++ b/testsites/apps_test.html
@@ -30,7 +30,7 @@
         </td>
       </tr>
     </table> </center>
-    <div id="main-body">
+    <div class="main-body">
       <h1>Apps</h1>
     
       <p>Welcome to my Apps page! </p>
