--- a/testsites/about_test.html
+++ b/testsites/about_test.html
@@ -32,7 +32,7 @@
     </table> </center>
     
     <div id="aboutpage">
-      <img id="face" src="/assets/jacob.JPG" alt"Jacob's Face">
+      <img id="face" src="/assets/jacob_new.jpg" alt"Jacob's Face">
       <h1>About Me</h1>
     
       <p>Welcome to my about me page! </p>
