--- a/testsites/about_test.html
+++ b/testsites/about_test.html
@@ -43,7 +43,7 @@
       has been a dream of mine, so doing it in this class will be very exciting.</p>
     </div>
     
-    <div class="main-body">
+    <div>
       
       <img id="mylike1" src="/assets/mylikes1.png">
       <img id="mylike2" src="/assets/mylikes2.png">
