--- a/testsites/about_test.html
+++ b/testsites/about_test.html
@@ -38,9 +38,10 @@
       <p>Welcome to my about me page! </p>
       <p> My name is Jacob Dauphinais, and 
       I have been interested in programming, developing, and computer science ever since I was young.
-    Being in the CSC106 The Joy of Programming Class is really exciting, 
+      Being in the CSC106 The Joy of Programming Class is really exciting, 
       as I get to learn more about languages I don't know! Working with others on coding projects
-      has been a dream of mine, so doing it in this class will be very exciting.</p>
+      has been a dream of mine, so doing it in this class will be very exciting. I also played tennis 
+      my freshman through junior year of high school, and our team won the State Championship during my sophmore year!</p>
     </div>
     
     <div>
