--- a/testsites/apps_test.html
+++ b/testsites/apps_test.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Home Page </title>
+    <title> Apps </title>
     <link rel = "stylesheet" href = "standardstyle.css">
   </head>
   <body>
