--- a/testsites/about_test.html
+++ b/testsites/about_test.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> About Me </title>
-    <link rel = "stylesheet" href = "standardstyle.css">
+    <link rel = "stylesheet" href = "standardstyle_test.css">
   </head>
   <body>
     <center> <img src="/assets/myBanner.jpg" alt="CSC 106 The Joy of Programming Jacob Dauphinais Programming Portfolio"> </center>
