--- a/about.html
+++ b/about.html
@@ -10,21 +10,21 @@
     <center> <table>
       <tr>
         <td> 
-          <a href="https://jacdauph.github.io/testsites/index_test.html">
+          <a href="https://jacdauph.github.io/index.html">
             <img src="/assets/home_new.png" alt="Home Page">
           </a>
         </td>
         <td> 
-          <a href="https://jacdauph.github.io/testsites/javascripts_test.html">
+          <a href="https://jacdauph.github.io/javascripts.html">
             <img src="/assets/javascripts_new.png" alt="JavaScripts Page">
           </a>
         </td>
         <td>
-          <a href="https://jacdauph.github.io/testsites/apps_test.html">
+          <a href="https://jacdauph.github.io/apps.html">
             <img src="/assets/apps_new.png" alt="Apps Page">
           </a>
         <td> 
-          <a href="https://jacdauph.github.io/testsites/about_test.html">
+          <a href="https://jacdauph.github.io/about.html">
             <img src="/assets/about_new.png" alt="About Me Page">
           </a>
         </td>
