--- a/javascripts.html
+++ b/javascripts.html
@@ -57,7 +57,7 @@
       <h2><a href="https://www.khanacademy.org/computer-programming/dauphinais_follow/5512911631990784">dauphinais_follow</a></h2><script src="https://www.khanacademy.org/computer-programming/dauphinais_follow/5512911631990784/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
       
       <a href="https://www.khanacademy.org/computer-programming/dauphinais_zoo/6038330483458048">
-        <img src="/assets/dauphinais_zoo_image.png" alt="Four bitmojis in a zoo">
+        <img id="zoo_image" src="/assets/dauphinais_zoo_image.png" alt="Four bitmojis in a zoo">
       </a>
       
     </div>
