--- a/about.html
+++ b/about.html
@@ -28,6 +28,11 @@
             <img src="/assets/about_new.png" alt="About Me Page">
           </a>
         </td>
+        <td> 
+          <a href="https://jacdauph.github.io/finalproject.html">
+            <img src="/assets/finalproject.png" alt="Final Project">
+          </a>
+        </td>
       </tr>
     </table> </center>
     
